--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,10 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=7.0.0",
+        "php": ">=7.2.0",
         "elasticsearch/elasticsearch": "^6.5",
-        "fideloper/proxy": "~3.3",
-        "laravel/framework": "5.5.*",
+        "fideloper/proxy": "^4.0",
+        "laravel/framework": "^5.8",
         "laravel/tinker": "~1.0",
         "predis/predis": "^1.1",
         "unamu1229/domain_rule": "^0.0.1"
