--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,10 @@
         "psr-4": {
             "App\\": "app/",
             "Package\\": "package/"
-        }
+        },
+        "files": [
+            "app/Foundation/helper.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
