--- a/package.json
+++ b/package.json
@@ -17,5 +17,11 @@
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
         "vue": "^2.5.7"
+    },
+    "dependencies": {
+        "laravel-echo": "^1.6.1",
+        "laravel-echo-server": "^1.6.1",
+        "pusher-js": "^5.1.1",
+        "socket.io-client": "^2.3.0"
     }
 }
